# vk-test-set

./: README.md  ValidationProcedure.md  pyproject.toml  vktest_config.yaml
docker/: rclone-bind.Dockerfile
vktestset/: ConfigManager.py  ValidationProcedure.py  __init__.py  __main__.py  basic_test.py  k8s_client.py
vktestset/templates/: 000-hello-world.yaml  010-simple-python.yaml  020-python-env.yaml  030-simple-shared-volume.yaml  040-config-volumes.yaml  050-limits.yaml  060-init-container.yaml  070-rclone-bind.yaml
